[gd_scene load_steps=17 format=3 uid="uid://qpseq5n48vbj"]

[ext_resource type="Script" path="res://Scenes/Game_Manager.gd" id="1_3cfg5"]
[ext_resource type="Texture2D" uid="uid://bq0r68ifa38rn" path="res://Assets/Objects/Store.png" id="1_iojbl"]
[ext_resource type="PackedScene" uid="uid://ddue67srgxhwd" path="res://Scenes/Characters/Cashier.tscn" id="2_j8olq"]
[ext_resource type="PackedScene" uid="uid://m3ebpcl7nk5k" path="res://Scenes/Characters/Customer1.tscn" id="3_ta2x0"]
[ext_resource type="PackedScene" uid="uid://r7cmbwqi5jo1" path="res://Scenes/Characters/Customer2.tscn" id="4_b87fn"]
[ext_resource type="PackedScene" uid="uid://both3knwlyfde" path="res://Scenes/Characters/Customer3.tscn" id="5_wcp3x"]
[ext_resource type="PackedScene" uid="uid://b7irbiy1fbr4x" path="res://Scenes/Characters/Customer4.tscn" id="6_ar3ca"]
[ext_resource type="PackedScene" uid="uid://bsyxm5m1dnwxl" path="res://Scenes/Characters/Customer5.tscn" id="7_3ukba"]
[ext_resource type="PackedScene" uid="uid://dm0qfuj7ior24" path="res://Scenes/Lungs.tscn" id="8_hoh6h"]
[ext_resource type="Script" path="res://Scripts/CustomerSpawner.gd" id="9_jedks"]
[ext_resource type="PackedScene" uid="uid://c6qh1ey5xwyrl" path="res://Scenes/scanner.tscn" id="10_hrdcb"]
[ext_resource type="PackedScene" uid="uid://cltq38ult5tai" path="res://Scenes/frustration_UI.tscn" id="11_ymo6u"]
[ext_resource type="PackedScene" uid="uid://cb8s53an2ypm7" path="res://Scenes/clock.tscn" id="13_0or76"]
[ext_resource type="PackedScene" uid="uid://b0xhpyak8gxg4" path="res://Scenes/customers_helped_UI.tscn" id="14_51e2c"]

[sub_resource type="Curve2D" id="Curve2D_vsdj7"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 1030, 300, 0, 0, 0, 0, 1250, 300, 0, 0, 0, 0, 1250, 520, 0, 0, 0, 0, 1550, 520)
}
point_count = 4

[sub_resource type="Curve2D" id="Curve2D_5insb"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 1550, 520, 0, 0, 0, 0, 1650, 520, 0, 0, 0, 0, 1650, 1150)
}
point_count = 3

[node name="GameManager" type="Node2D"]
script = ExtResource("1_3cfg5")

[node name="Store" type="Sprite2D" parent="."]
z_index = -3
position = Vector2(960, 540)
texture = ExtResource("1_iojbl")

[node name="Cashier" parent="." instance=ExtResource("2_j8olq")]
position = Vector2(1557, 280)

[node name="Lungs" parent="." instance=ExtResource("8_hoh6h")]
position = Vector2(1374, 900)

[node name="CustomerPathLineToRegister" type="Path2D" parent="." node_paths=PackedStringArray("next_path")]
curve = SubResource("Curve2D_vsdj7")
script = ExtResource("9_jedks")
is_spawner = true
customer_variants = Array[PackedScene]([ExtResource("3_ta2x0"), ExtResource("4_b87fn"), ExtResource("5_wcp3x"), ExtResource("6_ar3ca"), ExtResource("7_3ukba")])
next_path = NodePath("../CustomerPathExit")

[node name="CustomerPathExit" type="Path2D" parent="."]
curve = SubResource("Curve2D_5insb")
script = ExtResource("9_jedks")
is_exit = true

[node name="Scanner" parent="." instance=ExtResource("10_hrdcb")]
position = Vector2(962, 581)

[node name="Frustration_UI" parent="." instance=ExtResource("11_ymo6u")]
position = Vector2(542, 954)

[node name="Clock" parent="." instance=ExtResource("13_0or76")]
position = Vector2(9, -15)

[node name="Customers_helped_UI" parent="." instance=ExtResource("14_51e2c")]
position = Vector2(216, 38)

[node name="Static_customers" type="Node" parent="."]

[node name="static_group_1" type="Node" parent="Static_customers"]

[node name="Customer1" parent="Static_customers/static_group_1" instance=ExtResource("3_ta2x0")]
z_index = -1
position = Vector2(377, 603)

[node name="Customer4" parent="Static_customers/static_group_1" instance=ExtResource("3_ta2x0")]
z_index = -1
position = Vector2(911, 660)

[node name="Customer5" parent="Static_customers/static_group_1" instance=ExtResource("3_ta2x0")]
z_index = -1
position = Vector2(255, 996)

[node name="Customer2" parent="Static_customers/static_group_1" instance=ExtResource("3_ta2x0")]
z_index = -1
position = Vector2(642, 791)
rotation = 1.5708

[node name="Customer3" parent="Static_customers/static_group_1" instance=ExtResource("3_ta2x0")]
z_index = -1
position = Vector2(650, 312)
rotation = 3.14159

[node name="static_group_2" type="Node" parent="Static_customers"]

[node name="Customer2" parent="Static_customers/static_group_2" instance=ExtResource("4_b87fn")]
z_index = -1
position = Vector2(769, 809)

[node name="Customer3" parent="Static_customers/static_group_2" instance=ExtResource("4_b87fn")]
z_index = -1
position = Vector2(638, 425)
rotation = 1.5708

[node name="Customer4" parent="Static_customers/static_group_2" instance=ExtResource("4_b87fn")]
z_index = -1
position = Vector2(909, 772)
rotation = 4.71239

[node name="Customer5" parent="Static_customers/static_group_2" instance=ExtResource("4_b87fn")]
z_index = -1
position = Vector2(909, 772)
rotation = 4.71239

[node name="Customer7" parent="Static_customers/static_group_2" instance=ExtResource("4_b87fn")]
z_index = -1
position = Vector2(899, 303)
rotation = 1.5708

[node name="Customer6" parent="Static_customers/static_group_2" instance=ExtResource("4_b87fn")]
z_index = -1
position = Vector2(380, 375)
rotation = 4.71239

[node name="static_group_3" type="Node" parent="Static_customers"]

[node name="Customer3" parent="Static_customers/static_group_3" instance=ExtResource("5_wcp3x")]
z_index = -1
position = Vector2(377, 483)

[node name="Customer4" parent="Static_customers/static_group_3" instance=ExtResource("5_wcp3x")]
z_index = -1
position = Vector2(517, 295)
rotation = 1.5708

[node name="Customer5" parent="Static_customers/static_group_3" instance=ExtResource("5_wcp3x")]
z_index = -1
position = Vector2(649, 539)
rotation = 3.14159

[node name="Customer6" parent="Static_customers/static_group_3" instance=ExtResource("5_wcp3x")]
z_index = -1
position = Vector2(911, 526)

[node name="Customer7" parent="Static_customers/static_group_3" instance=ExtResource("5_wcp3x")]
z_index = -1
position = Vector2(334, 796)
rotation = 0.909317

[node name="static_group_4" type="Node" parent="Static_customers"]

[node name="Customer1" parent="Static_customers/static_group_4" instance=ExtResource("6_ar3ca")]
z_index = -1
position = Vector2(903, 408)

[node name="Customer2" parent="Static_customers/static_group_4" instance=ExtResource("6_ar3ca")]
z_index = -1
position = Vector2(385, 279)
rotation = 1.5708

[node name="Customer4" parent="Static_customers/static_group_4" instance=ExtResource("6_ar3ca")]
z_index = -1
position = Vector2(255, 1107)
rotation = 1.5708

[node name="Customer3" parent="Static_customers/static_group_4" instance=ExtResource("6_ar3ca")]
z_index = -1
position = Vector2(390, 702)

[node name="static_group_5" type="Node" parent="Static_customers"]

[node name="Customer1" parent="Static_customers/static_group_5" instance=ExtResource("7_3ukba")]
z_index = -1
position = Vector2(257, 912)

[node name="Customer2" parent="Static_customers/static_group_5" instance=ExtResource("7_3ukba")]
z_index = -1
position = Vector2(642, 705)
rotation = 3.14159

[node name="Customer4" parent="Static_customers/static_group_5" instance=ExtResource("7_3ukba")]
z_index = -1
position = Vector2(997, 298)
rotation = 1.5708

[node name="Customer3" parent="Static_customers/static_group_5" instance=ExtResource("7_3ukba")]
z_index = -1
position = Vector2(855, 832)
rotation = 0.165806

[connection signal="bad_breathing" from="Lungs" to="." method="_on_lungs_bad_breathing"]
[connection signal="hyperventilating" from="Lungs" to="." method="_on_lungs_hyperventilating"]
[connection signal="cart_empty" from="Scanner" to="." method="_on_scanner_cart_empty"]
[connection signal="one_second" from="Clock" to="." method="_on_clock_one_second"]
